# itaph

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
src/itaph/: decomposer.py  inventory.py  operator.py  typing.py  utils.py
tests/: test_decomposer.py  test_inventory.py  test_operator.py  test_typing.py  test_utils.py
